--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -1,6 +1,12 @@
-<resources>
+<!-- <resources>
   <color name="splashscreen_background">#a0cba9</color>
   <color name="iconBackground">#a0cba9</color>
   <color name="colorPrimary">#023c69</color>
   <color name="colorPrimaryDark">#ffffff</color>
+</resources> -->
+<resources>
+  <color name="splashscreen_background">#cafad4</color>
+  <color name="iconBackground">#cafad4</color>
+  <color name="colorPrimary">#cafad4</color>
+  <color name="colorPrimaryDark">#cafad4</color>
 </resources>
